@@ -1,16 +1,0 @@
-#ifndef LIBTORRENT_DELEGATOR_STATE_H
-#define LIBTORRENT_DELEGATOR_STATE_H
-
-namespace torrent {
-
-enum DelegatorState {
-  DELEGATOR_NONE,
-  DELEGATOR_FINISHED,
-  DELEGATOR_QUEUED,
-  DELEGATOR_DOWNLOADING,
-  DELEGATOR_STALLED
-};
-
-}
-
-#endif
