@@ -21,8 +21,6 @@ RequestList::delegate() {
     m_affinity = r->get_piece().get_index();
     m_reservees.push_back(r);
 
-    r->set_state(DELEGATOR_QUEUED);
-
     return &r->get_piece();
 
   } else {
@@ -32,44 +30,38 @@ RequestList::delegate() {
 
 void
 RequestList::cancel() {
-  m_downloading = false;
+  if (m_downloading)
+    throw internal_error("RequestList::cancel(...) called while is_downloading() == true");
 
   cancel_range(m_reservees.end());
 }
 
 void
 RequestList::stall() {
-  cancel();
+  std::for_each(m_reservees.begin(), m_reservees.end(),
+		call_member(&DelegatorReservee::set_stalled, value(true)));
 }
 
 bool
 RequestList::downloading(const Piece& p) {
-  if (m_reservees.size() && m_reservees.front()->get_state() == DELEGATOR_DOWNLOADING)
-    throw internal_error("RequestList::downloading(...) called but m_reservees.front() is in state DELEGATOR_DOWNLOADING");
-
   if (m_downloading)
     throw internal_error("RequestList::downloading(...) bug, m_downloaing is already set");
 
   ReserveeList::iterator itr = std::find_if(m_reservees.begin(), m_reservees.end(),
 					    eq(ref(p), call_member(&DelegatorReservee::get_piece)));
 
-  if (itr == m_reservees.end())
+  if (itr == m_reservees.end() || !m_delegator->downloading(**itr))
     return false;
 
   if ((*m_delegator->get_select().get_bitfield())[p.get_index()])
     throw internal_error("RequestList::downloading(...) called with a piece index we already have");
 
-  if (m_delegator->downloading(**itr)) {
-    cancel_range(itr);
-
-    m_downloading = true;
-    //m_reservees.front()->set_state(DELEGATOR_DOWNLOADING);
-
-    return true;
-  } else {
-    // TODO: Do something here about the queue.
-    return false;
-  }
+  cancel_range(itr);
+  
+  m_downloading = true;
+  m_piece = m_reservees.front()->get_piece();
+  
+  return true;
 }
 
 // Must clear the downloading piece.
@@ -81,6 +73,17 @@ RequestList::finished() {
   m_delegator->finished(*m_reservees.front());
 
   delete m_reservees.front();;
+  m_reservees.pop_front();
+
+  m_downloading = false;
+}
+
+void
+RequestList::skip() {
+  if (!m_downloading || !m_reservees.size())
+    throw internal_error("RequestList::skip() called without a downloading piece");
+
+  delete m_reservees.front();
   m_reservees.pop_front();
 
   m_downloading = false;
